РќРµ РїСЂР°РІРёР»СЊРЅРѕ С„РѕСЂРјРёСЂСѓСЋС‚СЃСЏ С„РѕСЂРјС‹. РљРѕРјРјРёС‚ РёР· РґРѕРјР° РЅР° СЃРµСЂРІРµСЂ. РќР°РґРѕ СЃРґРµР»Р°С‚СЊ РіРµРЅРµСЂР°С†РёСЋ HTML С„РѕСЂРј РЅР° СЃС‚РѕСЂРѕРЅРµ С€Р°Р±Р»РѕРЅРѕРІ

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -18,7 +18,7 @@
 
    {% block navbar%}
 
-        {% include '_navbar.html' %}
+        {% include 'admin/_navbar.html' %}
 
     {% endblock navbar%}
 
