РћР±РЅРѕРІР»РµРЅР° С€Р»Р°РІРЅР°СЏ СЃС‚СЂР°РЅРёС†Р°. Р”РѕР±Р°РІР»РµРЅ РґР°РјРї Р‘Р”. РњРµР»РєРёРµ РёР·РјРµРЅРµРЅРёСЏ.

--- a/app/templates/admin/_navbar.html
+++ b/app/templates/admin/_navbar.html
@@ -8,6 +8,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="{{ url_for('admin_index') }}">Главная</a>
+          <a class="navbar-brand" href="{{ url_for('index') }}">Основной сайт</a>
         </div>
         <div class="navbar-collapse collapse" id="top-navbar">
             <ul class="nav navbar-nav">
