--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,18 +17,45 @@
                     <div id="heading_form" class="panel-heading">
                         <h3>Какова ваша собака?</h3>
                     </div>
+                    <div class="panel-body">
                     
-                
-                        <div class="form-group">
-                            <div class="input-group mb-3">   
-                                {{ wtf.form_field(form.dog_age)}}
-                                {{ wtf.form_field(form.dog_weight)}}
-                                {{ wtf.form_field(form.dog_body_type)}}
-                                {{ wtf.form_field(form.dog_breed)}}
+                            <div class="form-group row">
+                                <label class="col-md-6 col-form-label">
+                                        {{ form.dog_age.label.text }}
+                                </label>
+                            
+                                <div class="col-md-6">
+                                    {{ form.dog_age(class='form-control') }}
+                                </div>
                             </div>
-                        </div>
+                            <div class="form-group row">
+                                <label class="col-md-6 col-form-label">
+                                        {{ form.dog_weight.label.text }}
+                                </label>
+                                <div class="col-md-6">
+                                    {{ form.dog_weight(class='form-control') }}
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-md-6 col-form-label">
+                                        {{ form.dog_body_type.label.text }}
+                                </label>
+                                <div class="col-md-6">
+                                    {{ form.dog_body_type(class='form-control') }}
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-md-6 col-form-label">
+                                        {{ form.dog_breed.label.text }}
+                                </label>
+                                <div class="col-md-6">
+                                    {{ form.dog_breed(class='form-control') }}
+                                </div>
+                            </div>
+                    </div>
                 </div>
-            </div>
+                </div>
+            
             
             
             <div class="col-md-6"> 
@@ -36,20 +63,57 @@
                         <div id="heading_form" class="panel-heading">
                             <h3>Выберите ингредиенты</h3>
                         </div>
-                        
-                    
-                            <div class="form-group">
-                                <div class="input-group mb-3">   
-                                    {{ wtf.form_field(form.meat)}}
-                                    {{ wtf.form_field(form.sub_product)}}
-                                    {{ wtf.form_field(form.vegitables)}}
-                                    {{ wtf.form_field(form.poridge)}}
+                        <div class="panel-body">
+                            <div class="form-group row">
+                                <label class="col-md-6 col-form-label">
+                                        {{ form.meat.label.text }}
+                                </label>
+                                <div class="col-md-6">
+                                    {{ form.meat(class='form-control') }}
                                 </div>
                             </div>
+                            <div class="form-group row">
+                                <label class="col-md-6 col-form-label">
+                                    {{ form.sub_product.label.text }}
+                                </label>
+                                <div class="col-md-6">
+                                    {{ form.sub_product(class='form-control')}}
+                                </div>
+                                
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-md-6 col-form-label">
+                                    {{ form.vegitables.label.text }}
+                                </label>
+                                <div class="col-md-6">
+                                    {{ form.vegitables(class='form-control') }}
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-md-6 col-form-label">
+                                    {{ form.poridge.label.text }}
+                                </label>
+                                <div class="col-md-6">
+                                    {{ form.poridge(class='form-control') }}
+                                </div>
+                            </div>
+                            {# 
+                            <div class="form-group row">
+                                <label class="col-md-6 col-form-label">
+                                    {{ form.dog_inlude_milk.label.text }}
+                                </label>
+                                <div class="col-md-3">
+                                    {{ form.dog_inlude_milk(class='form-control') }}
+                                </div>
+                        </div>
+                        #}
+                            
+                            
                     </div>
-                </div>
+            </div>
             <!-- Разместить по центру. -->
-            {{ wtf.form_field(form.dog_inlude_milk, class="custom-control-input") }}
+            {# {{ wtf.form_field(form.dog_inlude_milk, class="form-control") }} #}
+
             {{ wtf.form_field(form.submit, class="btn btn-primary form-contorl") }}
         </form>
     </div>
