--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@
                                         {{ form.dog_weight.label.text }}
                                 </label>
                                 <div class="col-md-6">
-                                    {{ form.dog_weight(class='form-control') }}
+                                    {{ form.dog_weight(class='form-control', placeholder=form.dog_weight.description )}}
                                 </div>
                             </div>
                             <div class="form-group row">
