--- a/app/templates/order.html
+++ b/app/templates/order.html
@@ -8,46 +8,52 @@
 <script type="text/javascript" src="/static/js/table_to_json.js"></script>
 
 <h1 class="text-center"> Ваш заказ </h1>
-<h2>Основной рацион</h2>
-{% if result %}
-    <hr>
-    <table class="table table-striped table-bordered" id="data_table">
-    <thead>
-        <tr>
-            {% for key in result[0] %}
-            <th >{{  key }}</th>
-            {% endfor %}
-            
-        </tr>
-    </thead>
-    <tbody>
-            {% for row in result %}
-                {% if row['Продукт'] == 'Итого:' %}
-                    <tr class="success">
-                {% else %}
+<div class="panel panel-default">
+        <div id="heading_form" class="panel-heading">
+            <h2>Основной рацион</h2>
+        </div>
+            {% if result %}
+                <hr>
+                <table class="table table-striped table-bordered" id="data_table">
+                <thead>
                     <tr>
-                {% endif %}
-                {% for value in row.values() %}
-                    {#
-                    {% if value == 'Итого:' %}
-                        <td class="success" >{{ value }}</td>
-                    {% else %}
-                        <td>{{ value }}</td>
-                    {% endif %}
-                    #}
-                    <td>{{ value }}</td>
+                        {% for key in result[0] %}
+                        <th >{{  key }}</th>
+                        {% endfor %}
+                        
+                    </tr>
+                </thead>
+                <tbody>
+                        {% for row in result %}
+                            {% if row['Продукт'] == 'Итого:' %}
+                                <tr class="success">
+                            {% else %}
+                                <tr>
+                            {% endif %}
+                            {% for value in row.values() %}
+                                {#
+                                {% if value == 'Итого:' %}
+                                    <td class="success" >{{ value }}</td>
+                                {% else %}
+                                    <td>{{ value }}</td>
+                                {% endif %}
+                                #}
+                                <td>{{ value }}</td>
 
-                {% endfor %}
-           
-            </tr>
-        {% endfor %}
-    </tbody>
-    </table>
-{% endif %}
+                            {% endfor %}
+                    
+                        </tr>
+                    {% endfor %}
+                </tbody>
+                </table>
+            {% endif %}
 
-
+</div>
 {% if milks %}
-<h2>Кисломолочный рацион</h2>
+<div class="panel panel-default">
+        <div id="heading_form" class="panel-heading">
+            <h2>Кисломолочный рацион</h2>
+        </div>
 
     <hr>
     <table class="table table-striped table-bordered" id="data_table">
@@ -75,7 +81,7 @@
     </tbody>
     </table>
 {% endif %}
-
+</div>
 <div class="row">
     <div class="col-md-7 col-md-offset-3">
         <div class="alert alert-info" >
