Р”РѕР±Р°РІР»РµРЅР° РІСЃС‚Р°РІРєР° РєР»РёРµРЅС‚Р° РІ Р‘Р”

--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -4,7 +4,7 @@
 <div class="center-block" style="width: 600px;">
     <h1 class="text-center">Пятисотая ошибка </h1>
     <p class="text-center lead">
-       Добро пожаловать на самую посещаемую страницу КоКоС-Online!
+       Добро пожаловать на самую посещаемую страницу Нашего сайта!
     </p>
     <p class="text-center lead">
         Вы увидели ее исключительно потому, что наш сервер задумался о природе гравитационного коллапса сверхмассивных объектов и его влияния на энтропию вселенной. да, он у нас головастый.
